// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든 스냅샷 - 깔끔한 메모 프리셋 > chatgpt 샘플 1`] = `
"# 프로젝트 시작하기

이 가이드는 **아주 중요한** 내용을 담고 있습니다.

## 준비물

- **Node.js**: 최신 LTS 버전
- **에디터**: VS Code 추천

## 다음 단계

1. 저장소를 클론합니다
2. 의존성을 설치합니다
3. 개발 서버를 실행합니다

**끝까지 읽어주셔서 감사합니다!**
"
`;

exports[`골든 스냅샷 - 깔끔한 메모 프리셋 > claude 샘플 1`] = `
"# 개요

아래 표는 주요 항목을 정리한 것입니다.

| 항목  | 설명 | 비고     |
| --- | -- | ------ |
| 속도  | 빠름 | 캐시 사용  |
| 안정성 | 높음 | 테스트 완료 |

## 세부 사항

- 첫 번째 포인트
  - 중첩된 세부 항목
- 두 번째 포인트
"
`;

exports[`골든 스냅샷 - 깔끔한 메모 프리셋 > gemini 샘플 1`] = `
"프로젝트 소개

- 핵심 기능 A
- 핵심 기능 B
- 핵심 기능 C

**참고**: 자세한 내용은 문서를 확인하세요.

따옴표 예시: "이것은 인용문입니다".
"
`;

exports[`골든 스냅샷 - 블로그(네이버) > claude 샘플 표 → 텍스트 1`] = `
"개요

아래 표는 주요 항목을 정리한 것입니다.

항목: 속도, 설명: 빠름, 비고: 캐시 사용

항목: 안정성, 설명: 높음, 비고: 테스트 완료

세부 사항

- 첫 번째 포인트
  - 중첩된 세부 항목
- 두 번째 포인트
"
`;
